Basic functional Ui, still need to squash some bugs and improve the UI. But game is working.

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,23 @@
 html {
     background-color: black;
 }
+
+.scoreBoard {
+    color: white;
+}
+
+.roundResult {
+    color: white;
+}
+
+#playerSelection {
+    color: white;
+}
+
+#computerSelection {
+    color: white;
+}
+
+#roundResult {
+    color: white;
+}
